CSS logo and Header background fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="./CSS/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -12,12 +13,14 @@
 	<body>
 		<button onclick="topFunction()" id="myBtn" title="Go to the top of the page">Go to top</button>
 		<header>
-		<h1>
-			Yui
-		</h1>
-		<p>
-			An S.A.O Inspired Discord bot
-		</p>
+			<div id="teaserText">
+				<h1>
+					Yui
+				</h1>
+				<p>
+					An S.A.O Inspired Discord bot
+				</p>
+			</div>
 		</header>
 		<div id="div1">
 			<h1>
@@ -30,7 +33,6 @@
 				Let users fight creatures<br>
 				Give users warnings and kick them upon reaching x amount of warnings<br>
 				Show users a neat profile embed, with their level, XP, rep points and much more!<br>
-				
 			</p>
 		</div>
 		<div id="div2">
